manifests/apps/03-files/01-nextcloud/12-nextcloud-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:25.0.5-apache
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - mountPath: /var/www/html
          name: nextcloud-data
        - mountPath: /mnt/music
          name: jellyfin-music
      volumes:
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nextcloud-pvc
      - name: jellyfin-music
        nfs:
          server: 192.168.57.2
          path: /mnt/user/media/Music
          readOnly: true
