manifests/apps/03-files/01-nextcloud/10-nextcloud-service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: nextcloud-service
  namespace: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
  - name: http
    port: 80
